
option java_outer_classname="InsertResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message InsertResponse {
	optional uint64 version = 1;
	optional int64 requestId = 2;
	optional int32 commandID = 3;
}